<resources>
    <string name="app_name">Local Mate</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="i_don_t_have_account">I don\'t have account.</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="i_already_have_account">I already have account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_have_account_sign_in">I have account. Sign in.</string>
    <string name="email">Email</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="username">Username</string>
    <string name="dob">YYYY-MM-DD (DOB)</string>
    <string name="address">Address</string>
    <string name="localmate">Localmate</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="show1">SHOW</string>
    <string name="show2">SHOW</string>
    <string name="register">Register</string>
    <string name="phoneno">Phoneno</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="find_the_e_rickshaw_around_you_with_just_one_click_n_book_rides_from_anywhere">Find the e-rickshaw around you with just one click. \n Book rides from anywhere.</string>
    <string name="search">Search</string>
    <string name="mapbox_access_token">sk.eyJ1IjoicHJha2FzaDExNTk5IiwiYSI6ImNrOGRlYWFhaTBiZWQzZ21sMmNid2dsMjMifQ.S3j62cSf-uOlPPWqp7R3zQ</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="move_map_instruction">Place a picker anywhere</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">place name</string>
    <string name="user_location_permission_explanation">permission explanation</string>
    <string name="user_location_permission_not_granted">permission not granted</string>
    <string name="directions_activity_toast_message" />
</resources>
