<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/full_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_field"
        android:ems="10"
        android:focusable="auto"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="#66000000"
        android:drawableStart="@drawable/user"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_field"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/phoneno"
        android:inputType="number"
        android:textColor="#9C645F5F"
        android:drawableStart="@drawable/phone"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/full_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/full_name"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_field"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/dob"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dob"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_field"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/show_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_light"
        android:text="SHOW"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_field"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <TextView
        android:id="@+id/show_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="SHOW"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="230dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/roboto_light"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="@+id/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="207dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/roboto_light"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_btn"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_field"
        android:ems="10"
        android:focusable="true"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/dob"
        android:textColor="#85000000"
        android:drawableStart="@drawable/date"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/phoneno"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phoneno"
        app:layout_constraintTop_toBottomOf="@+id/phoneno"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>